add get user home posts and update swagger docs
